<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/Guideline"
        android:orderInCategory="100"
        android:title="@string/Guideline"
        app:showAsAction="never" />
    <item
        android:id="@+id/ChatRome"
        android:orderInCategory="100"
        android:title="@string/ChatRome"
        app:showAsAction="never" />
    <item
        android:id="@+id/Emergency"
        android:orderInCategory="100"
        android:title="@string/Emergency"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/How_to_use"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/How_to_use" />

    <item android:id="@+id/aboutus"
        android:orderInCategory="100"
        android:title="@string/aboutus" />

    <item android:id="@+id/logout"
        android:orderInCategory="100"

        android:title="@string/Logout" />


</menu>
