<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgggg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">

            <ImageView
                android:layout_width="135dp"
                android:layout_height="130dp"
                android:id="@+id/isecure_logo_sign_in"
                android:src="@drawable/logo_new"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="top|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.19">

            <EditText

                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText

                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login"
                android:onClick="userLogin"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/Remember_me"
                android:id="@+id/checkBox_remember_me"
                android:textStyle="bold"
                android:textSize="18dp"
                android:checked="false"
                android:textColor="#f8fcfc"
                android:layout_below="@+id/editText2"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:clickable="true"
                android:layout_gravity="left|center_horizontal"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Forgot_Password"
                android:id="@+id/forgot_password"
                android:layout_below="@+id/button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#f8f9fa"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:onClick="userRegi"/>

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_link_to_Skip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_Skip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:onClick="btnSkip"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
