<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tool_three"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/trigger_an_alert"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button_click_Only"
            android:id="@+id/radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="20dp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Shake_Only"
            android:id="@+id/radioButton2"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="20dp" />

        <RadioButton
            android:layout_width="405dp"
            android:layout_height="wrap_content"
            android:text="@string/Either_Button_Click_and_Sheck"
            android:id="@+id/radioButton3"
            android:checked="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#920909" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Set_frequency"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_often"
            android:id="@+id/radioButton4"
            android:layout_weight="0.50"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#7a0b0b" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/les_often"
            android:layout_weight="0.50"
            android:id="@+id/radioButton5"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#085115" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="172dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:background="@android:color/transparent"
                android:layout_gravity="left"
                android:src="@drawable/done_button"
                android:layout_alignTop="@+id/imageButton4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="47dp"
                android:layout_marginStart="47dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:src="@drawable/next_button"
                android:adjustViewBounds="true"
                android:maxWidth="120dp"
                android:maxHeight="120dp"
                android:scaleType="fitCenter"
                android:clickable="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="47dp"
                android:layout_marginEnd="47dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>