<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:src="@drawable/voicerecord"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/button2"
                android:layout_alignEnd="@+id/button2"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Stop"
                    android:id="@+id/button2"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Record"
                    android:id="@+id/button"
                    android:layout_below="@+id/imageView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                android:layout_weight="1" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Play"
                    android:id="@+id/button3"
                    android:layout_alignTop="@+id/button2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

